--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -27,6 +27,7 @@
         border: 2px solid #40AB7E;
         border-radius: 30px;
         background: black;
+        margin: 0 15px;
       }
 
       &__btn2{
